--- a/resume/index.html
+++ b/resume/index.html
@@ -57,13 +57,14 @@
         <div class="popup-contentBut">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <a href="AsiyaYakhinaResume.pdf" download class="btn btn-custom-4">Download as PDF</a>
+                    <a href="AsiyaYakhinaResume.pdf" download class="btn btn-custom-4" download>Download as PDF</a>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12 text-center">
-                <iframe src="AsiyaYakhinaResume.pdf" height="792" width="100%"></iframe>
+                <object data="AsiyaYakhinaResume.pdf" type="application/pdf" width="100%" height="100%">
+</object>
             </div>
         </div>
     </div>
