--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -66,13 +66,14 @@
             <div class="row">
                 <div class="col-sm-12" text="center">
                     <p>
-                        I’m graduating with Bachelors in Media Arts and Sciences from Wellesley College in Spring of 2016. My degree uniquely combines classes in computer science, design, and art. This training has enabled me to participate in all stages of design process, complete multiple projects from start to finish, and collaborate effectively in interdisciplinary teams.
+                        I’m graduating with Bachelors in Media Arts and Sciences from Wellesley College in Spring of 2016. My degree combines classes in computer science, design, and art. This training has enabled me to participate in all stages of design process, complete multiple projects from start to finish, and collaborate effectively in interdisciplinary teams.
                     </p>
                     <p>
-                        My interests lie in designing user interfaces and experiences. I also love playing and making games. Last summer, I worked as a UX designer on a game at Microsoft and learned a lot in the process. I’ll tell you more about it as soon as it gets shipped :)
+                        My interests lie in designing user interfaces and experiences. I also love playing and making games. Last summer, I worked as a UX designer on a game at Microsoft and learned a lot in the process. I can tell you more about it as soon as it gets shipped :)
                     </p>
                     <p style="color:#F79023">
                         I believe that design is the art of storytelling and usability. A good story comes from pure creative effort. Usability is achieved through extensive testing. I personally worship both of these design stages and consider them critically important in any project.
+                    
                     </p>
                 </div>
             </div>
