--- a/studyspot/index.html
+++ b/studyspot/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-12">
-                    <p> <b>My role:</b> developing the vision behind the application, contributing to the design ideas, creating the wireframes, preparing materials and tasks for user testing, and implementating the front-end of the application.
+                    <p> <b>My role:</b> developing the vision behind the application, contributing to the design ideas, creating the wireframes, preparing materials and tasks for user testing, and implementing the front-end of the application.
                     </p>
                     <p>I worked on this application with Amanda Foun and Kai Jordan.
                     </p>
