--- a/studyspot/index.html
+++ b/studyspot/index.html
@@ -9,6 +9,7 @@
     <title>Asiya Yakhina</title>
     <!-- CSS -->
     <!-- Bootstrap core CSS -->
+    
     <link href="../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <!-- Font Awesome CSS -->
     <link href="../assets/css/font-awesome.min.css" rel="stylesheet" media="screen">
@@ -158,7 +159,7 @@
         <div class="popup-contentBtnPar">
             <div class="row">
                 <div class="col-sm-12">
-                    <p>Design #2 has only two starting questions, asking the user what type of space and what noise level do they prefer. The filter button appears on the search resul screen together with the list of generated suggestions. This design appeals to users who want to have more control and prefer access to more information. </p>
+                    <p>Design #2 has only two starting questions, asking the user what type of space and what noise level do they prefer. The filter button appears on the search result screen together with the list of generated suggestions. This design appeals to users who want to have more control and prefer access to more information. </p>
                 </div>
             </div>
         </div>
