--- a/blockedonline/index.html
+++ b/blockedonline/index.html
@@ -83,12 +83,12 @@
                     <div class="headerUnderText">
                         <h4 class="popup-title">Problem</h4>
                     </div>
-                    <p> There is little transparency about internet censorship in the world. Some resources can help the user tell if the website is blocked in their area, however it is difficult to tell whether a given website is blocked in another country. Stats about online censorhip around the world are also limited to numbers describing how "bad" the censorhip is, but lack depth and comprehensiveness.
+                    <p> There is little transparency about internet censorship in the world. Some resources can help the user tell if the website is blocked in their area, however it is difficult to tell whether a given website is blocked in another country. Stats about online censorship around the world are also limited to numbers describing how "bad" the censorship is, but lack depth and comprehensiveness.
                     </p>
                     <div class="headerUnderText">
                         <h4 class="popup-title">Solution</h4>
                     </div>
-                    <p>BlockedOnline uses crowdsourcing approach to gather data on internet censorship. This project relies on people from various countries to download the application from the website, run it on their local machine and let the application "scan" a list of websites to check if they're blocked or not. This way, people aroung the world can provide infromation on blocked websites in their region. The goal behind Blocked Online is to provide accessible and readable information on internet censorship in different countries and to raise global awareness of what often remains hidden from the eyes of the public.</p>
+                    <p>BlockedOnline uses crowdsourcing approach to gather data on internet censorship. This project relies on people from various countries to download the application from the website, run it on their local machine and let the application "scan" a list of websites to check if they're blocked or not. This way, people aroung the world can provide inforomation on blocked websites in their region. The goal behind Blocked Online is to provide accessible and readable information on internet censorship in different countries and to raise global awareness of what often remains hidden from the eyes of the public.</p>
                 </div>
             </div>
             <div class="row">
