--- a/lastdinosaur/index.html
+++ b/lastdinosaur/index.html
@@ -90,7 +90,7 @@
                     <p>The game features the last dinosaur who needs to be saved from death to prevent global dinosaur extinction. The last dinosaur needs to avoid falling balls of fire and stones caused by the asteroid attack. To survive in the apocalypse, he needs to catch falling food items and increase his health level. Every time the health level reaches its maximum, the dinosaur gets another egg - an equivalent of life. As soon as the dinosaur gets 10 eggs, the future of his race is safe and sound and the game is won. If the dinosaur runs out of eggs, the race gets extinct and the game is lost.
                     </p>
                     <p>
-                        To accomodate various player skills, the game has 3 levels:
+                        To acommodate various player skills, the game has 3 levels:
                     </p>
                 </div>
             </div>
