--- a/walle/index.html
+++ b/walle/index.html
@@ -320,8 +320,8 @@
             <div class="row">
                 <div class="col-sm-12">
                     <p>
-                        I closely examined different Wall-E images that I could find online and replicated his geometry in Three.js - a 3D Javascript library. I spent the most time on creating his eyes, especially on recreating the different eye details out of extruded geomteries and bezier surfaces. </p>
-                    <p>I also ensured that the eyes look lively and animated. To achieve this effect, I placed 2 extra cameras inside the eyes that continuously "record" the scene. Then I mapped the video that the camperas are recording as a texture on the eyes' surface. That way, Well-E's eyes are continuously relfecting the scene.
+                        I closely examined different Wall-E images that I could find online and replicated his geometry in Three.js - a 3D Javascript library. I spent the most time on creating his eyes, especially on recreating the different eye details out of extruded geometries and bezier surfaces. </p>
+                    <p>I also ensured that the eyes look lively and animated. To achieve this effect, I placed 2 extra cameras inside the eyes that continuously "record" the scene. Then I mapped the video that the cameras are recording as a texture on the eyes' surface. That way, Well-E's eyes are continuously reflecting the scene.
                     </p>
                     <p>Creating Eve did not take as long because she has fewer details and the material of her character is rather uniform and easy to recreate. I used several bezier surfaces to model her character, as well texture mapping for her face.
                     </p>
