--- a/blockedonline/index.html
+++ b/blockedonline/index.html
@@ -332,7 +332,7 @@
     <div class="popup-contentBut">
         <div class="row">
             <div class="col-sm-12 text-center">
-                <a href="mailto:ayakhina@wellesley.edu" class="btn btn-custom-4">ayakhina@wellesley.edu</a> </div>
+                <a href="mailto:hello@asiya.design" class="btn btn-custom-4">hello@asiya.design</a> </div>
         </div>
     </div>
     <script src="../assets/js/jquery-1.11.1.min.js"></script>
