--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="popup-contentBut">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <a href="mailto:ayakhina@wellesley.edu" class="btn btn-custom-4">ayakhina@wellesley.edu</a> </div>
+                    <a href="mailto:hello@asiya.design" class="btn btn-custom-4">hello@asiya.design</a> </div>
             </div>
         </div>
         <!-- Footer start -->
