--- a/research/index.html
+++ b/research/index.html
@@ -30,11 +30,20 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="../sss/sss.min.js"></script>
     <link rel="stylesheet" href="../sss/sss.css" type="text/css" media="all">
+    
     <script>
     jQuery(function($) {
         $('.slider').sss();
     });
     </script>
+    
+    	<script type="text/javascript">
+setTimeout(function(){var a=document.createElement("script");
+var b=document.getElementsByTagName("script")[0];
+a.src=document.location.protocol+"//script.crazyegg.com/pages/scripts/0047/0335.js?"+Math.floor(new Date().getTime()/3600000);
+a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+</script>
+
 </head>
 
 <body>
