--- a/walle/index.html
+++ b/walle/index.html
@@ -46,6 +46,14 @@
     <script src="createStem.js"></script>
     <script src="createEve.js"></script>
     <script src="createWallE.js"></script>
+    
+    	<script type="text/javascript">
+setTimeout(function(){var a=document.createElement("script");
+var b=document.getElementsByTagName("script")[0];
+a.src=document.location.protocol+"//script.crazyegg.com/pages/scripts/0047/0335.js?"+Math.floor(new Date().getTime()/3600000);
+a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+</script>
+
 </head>
 
 <body>
