--- a/index.html
+++ b/index.html
@@ -45,10 +45,36 @@ setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent
 })();
 </script>
 <!-- End Inspectlet Embed Code -->
+
+
+ <meta property="og:type"   content="profile" /> 
+  <meta property="og:title"  content="artwork by Kiarash" /> 
+
+<meta property="og:description" content="Asiya Yakhins is a UX+UI designer. Loves working with people, telling stories, and testing her designs with real users."/ >
+  <meta property="og:image:url"  content="http://asiya.design/assets/images/brainstorming/brainst.png" /> 
+  <meta property="og:image" content="http://asiya.design/assets/images/brainstorming/brainst.png">
+  <meta property="profile:first_name"  content="Asiya" /> 
+  <meta property="profile:last_name"  content="Yakhina" /> 
+  <meta property="profile:username"  content="asiya.yakhina" />
 	
 </head>
 
 <body>
+	
+	
+	<script type="application/ld+json">
+{
+"@context": "http://schema.org/",
+"@type": "Person",
+"url": "http://asiya.design/",
+"image": "http://asiya.design/assets/images/brainstorming/brainst.png",
+"logo": "http://asiya.design/assets/images/brainstorming/brainst.png",
+"name": "Asiya Yakhina"
+}
+</script>
+
+
+
     <!-- Preloader -->
     <div id="preloader">
         <div id="status">
