--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent
 
 
  <meta property="og:type"   content="profile" /> 
-  <meta property="og:title"  content="artwork by Kiarash" /> 
+  <meta property="og:title"  content="Asiya Yakhina" /> 
 
 <meta property="og:description" content="Asiya Yakhins is a UX+UI designer. Loves working with people, telling stories, and testing her designs with real users."/ >
   <meta property="og:image:url"  content="http://asiya.design/assets/images/brainstorming/brainst.png" /> 
