--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Asiya Yakhina</title>
+    <title>Artwork by Kiarash</title>
     <!-- CSS -->
     <!-- Bootstrap core CSS -->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -27,54 +27,9 @@
     <!-- Custom styles CSS -->
     <link href="assets/css/style.css" rel="stylesheet" media="screen">
     <link rel="shortcut icon" href="favicon2.png">
-	<script type="text/javascript">
-	setTimeout(function(){var a=document.createElement("script");
-	var b=document.getElementsByTagName("script")[0];
-	a.src=document.location.protocol+"//script.crazyegg.com/pages/scripts/0047/0335.js?"+Math.floor(new Date().getTime()/3600000);
-	a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
-	</script>
-	
-	
-	<!-- Begin Inspectlet Embed Code -->
-<script type="text/javascript" id="inspectletjs">
-window.__insp = window.__insp || [];
-__insp.push(['wid', 1863209720]);
-(function() {
-function ldinsp(){if(typeof window.__inspld != "undefined") return; window.__inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); };
-setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent ? window.attachEvent('onload', ldinsp) : window.addEventListener('load', ldinsp, false)) : ldinsp();
-})();
-</script>
-<!-- End Inspectlet Embed Code -->
-
-
- <meta property="og:type"   content="profile" /> 
-  <meta property="og:title"  content="Asiya Yakhina" /> 
-
-<meta property="og:description" content="UX+UI designer. Loves working with people, telling stories, and testing her designs with real users."/ >
-  <meta property="og:image:url"  content="http://asiya.design/assets/images/brainstorming/brainst.png" /> 
-  <meta property="og:image" content="http://asiya.design/assets/images/brainstorming/brainst.png">
-  <meta property="profile:first_name"  content="Asiya" /> 
-  <meta property="profile:last_name"  content="Yakhina" /> 
-  <meta property="profile:username"  content="asiya.yakhina" />
-	
 </head>
 
 <body>
-	
-	
-	<script type="application/ld+json">
-{
-"@context": "http://schema.org/",
-"@type": "Person",
-"url": "http://asiya.design/",
-"image": "http://asiya.design/assets/images/brainstorming/brainst.png",
-"logo": "http://asiya.design/assets/images/brainstorming/brainst.png",
-"name": "Asiya Yakhina"
-}
-</script>
-
-
-
     <!-- Navigation start -->
     <header class="header">
         <nav class="navbar navbar-custom" role="navigation">
@@ -91,8 +46,7 @@ setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent
                 <div class="collapse navbar-collapse" id="custom-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a style="color:#F79023" href="/">PORTFOLIO</a></li>
-                        <li><a href="aboutme">ABOUT ME</a></li>
-                        <li><a href="resume">RESUME</a></li>
+                        <li><a href="aboutme">ABOUT THE ARTIST</a></li>
                     </ul>
                 </div>
             </div>
@@ -100,31 +54,37 @@ setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent
         </nav>
     </header>
     <!-- Navigation end -->
-    <!-- Portfolio start -->
-    <section id="portfolio" class="module paddingb-none">
-        <div class="container" style="text-align: center" id="homeLabel">
+    <!-- Portfolio start -->        
+    <div class="popup-content3030" style="text-align: center">
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="module-headerIndex">
-                        <h1>User interface and experience designer.
-								</h1>
-                        <div class="module-subtitle">
-                            Loves working with people, telling stories, and testing her designs with real users.
-                        </div>
-
-                    </div>
+                    <h5 class="popup-title">LATEST WORK</h5>
                 </div>
             </div>
-            <!-- .row -->
-            <!-- Portfolio Filter start-->
-            <!-- Portfolio Filter end -->
         </div>
-        <!-- .contaier -->
-
-
-               <ul class="portfolio-items-container">
-
-
+        <ul class="portfolio-items-container">
+            <li class="portfolio-item" data-groups="all image">
+                <figure>
+                    <img src="assets/images/walle/wallEcolver.png" alt="">
+                    <figcaption>
+                        <a href="walle"></a>
+                        <div class="caption-inner">
+                            <h4 class="portfolio-item-title">3D modelling</h4>
+                            <div class="portfolio-item-desc">Recreating Wall-E in Three.js</div>
+                        </div>
+                    </figcaption>
+                </figure>
+            </li>
+        </ul>
+    <div class="popup-content3030" style="text-align: center">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h5 class="popup-title">VIDEO WORK</h5>
+                </div>
+            </div>
+        </div>
+    <section id="portfolio" class="module paddingb-none">
+        <ul class="portfolio-items-container">
             <li class="portfolio-item" data-groups="all video">
                 <figure>
                     <img src="assets/images/arcelik/istiklalTile.png" alt="">
@@ -137,34 +97,7 @@ setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent
                     </figcaption>
                 </figure>
             </li>
-         
-            <li class="portfolio-item" data-groups="all slideshow">
-                <figure>
-                    <img src="assets/images/microsoft/splashTile.png">
-                    <figcaption>
-                        <a href="microsoftgame"></a>
-                        <div class="caption-inner">
-                            <h4 class="portfolio-item-title">Game design</h4>
-                            <div class="portfolio-item-desc">Interning at Microsoft as a UX design intern</div>
-                        </div>
-                    </figcaption>
-                </figure>
-            </li>
 
-
-                 <li class="portfolio-item" data-groups="all video">
-                <figure>
-                    <img src="assets/images/blockedOnline/blockedOnlineTile-01.png" alt="">
-                    <figcaption>
-                        <a href="blockedonline"></a>
-                        <div class="caption-inner">
-                            <h4 class="portfolio-item-title">Web Design</h4>
-                            <div class="portfolio-item-desc">Blocked Online: Unveiling internet censorship</div>
-                        </div>
-                    </figcaption>
-                </figure>
-            </li>
-            
 
             <li class="portfolio-item" data-groups="all slideshow">
                 <figure>
@@ -193,46 +126,6 @@ setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent
                 </figure>
             </li>
 
-     <li class="portfolio-item" data-groups="all image">
-                <figure>
-                    <img src="assets/images/keepaway/cover.png" alt="">
-                    <figcaption>
-                        <a href="keepaway"></a>
-                        <div class="caption-inner">
-                            <h4 class="portfolio-item-title">dog toy design</h4>
-                            <div class="portfolio-item-desc">KeepAway: distracting your dog from <br>destroying your house</div>
-                            </a>
-                    </figcaption>
-                </figure>
-            </li>
-
-
-
-            <li class="portfolio-item" data-groups="all slideshow">
-                <figure>
-                    <img src="assets/images/brainstorming/brainst.png" alt="">
-                    <figcaption>
-                        <a href="brainstorming"></a>
-                        <div class="caption-inner">
-                            <h4 class="portfolio-item-title">Brainstorm Facilitation</h4>
-                            <div class="portfolio-item-desc">Using design thinking principles
-                                <br> to lead creative ideation meetings</div>
-                        </div>
-                    </figcaption>
-                </figure>
-            </li>
-            <li class="portfolio-item" data-groups="all image">
-                <figure>
-                    <img src="assets/images/lastdinosaur/dinoTile1.png" alt="">
-                    <figcaption>
-                        <a href="lastdinosaur"></a>
-                        <div class="caption-inner">
-                            <h4 class="portfolio-item-title">Game design + development</h4>
-                            <div class="portfolio-item-desc">Save the dinosaur from extinction</div>
-                        </div>
-                    </figcaption>
-                </figure>
-            </li>
         </ul>
         <div class="popup-content3030" style="text-align: center">
             <div class="row">
